prevent dark mode from changing colors

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root{
+    color-scheme: light only;
+}
+
 html {
     background-image: url('images/background.jpg');
     background-repeat: no-repeat;
